# androidremote

./: .gitignore  IMPLEMENTATION_PLAN.md  build.gradle.kts  gradle.properties  settings.gradle.kts
agent/: Cargo.toml
agent/.cargo/: config.toml
agent/crates/agent-bin/: Cargo.toml
agent/crates/agent-bin/src/: helper.rs  install.rs  main.rs
agent/crates/agent-core/: Cargo.toml
agent/crates/agent-core/src/: auto_update.rs  config.rs  connection.rs  desktop.rs  files.rs  lib.rs  protocol.rs  session.rs  telemetry.rs
agent/crates/agent-linux/: Cargo.toml
agent/crates/agent-linux/src/: filesystem.rs  input.rs  input_x11.rs  lib.rs  screen.rs  screen_wayland.rs  screen_x11.rs  service.rs  system_info.rs  terminal.rs
agent/crates/agent-platform/: Cargo.toml
agent/crates/agent-platform/src/: filesystem.rs  input.rs  lib.rs  screen.rs  service.rs  system_info.rs  terminal.rs
agent/crates/agent-windows/: Cargo.toml
agent/crates/agent-windows/src/: filesystem.rs  helper_launcher.rs  input.rs  installer.rs  ipc.rs  lib.rs  screen.rs  service.rs  session_detect.rs  system_info.rs  terminal.rs
agent/installer/: BUILD.md  build-installer.sh
agent/installer/windows/: installer.nsi
agent/scripts/: install-linux.sh  install-windows.ps1
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
core-crypto/: build.gradle.kts
core-protocol/: build.gradle.kts
core-transport/: build.gradle.kts
docs/: ANDROID_INSTALLATION.md  PRODUCTION_DEPLOYMENT.md  SETUP_FOOTPRINTS_MEDIA.md
docs/plans/: 2025-01-27-mdm-enrollment-design.md  2025-01-27-mdm-server-updates.md  2026-01-21-app-integration-design.md  2026-01-21-app-integration.md  2026-01-28-app-upload-design.md
feature-camera/: build.gradle.kts
feature-camera/src/main/: AndroidManifest.xml
feature-files/: build.gradle.kts
feature-files/src/main/: AndroidManifest.xml
feature-input/: build.gradle.kts
feature-input/src/main/: AndroidManifest.xml
feature-screen/: build.gradle.kts
feature-screen/src/main/: AndroidManifest.xml
gradle/: libs.versions.toml
screen-server/: build.gradle.kts
screen-server/src/main/: AndroidManifest.xml
scripts/: adb-install.sh  start-screen-server.sh
server/: .env.example  .eslintrc.js  jest.config.js  package-lock.json  package.json  ws_test_ui.cjs
server/src/: app.ts  index.ts  relay.ts  signaling.ts
server/src/db/: connection.ts  schema.ts
server/src/middleware/: auth.ts
server/src/services/: agentBinaryStore.ts  agentConnectionStore.ts  appInventoryStore.ts  appPackageStore.ts  appSyncService.ts  auditStore.ts  commandStore.ts  deviceStore.ts  enrollmentStore.ts  eventStore.ts  fileTransferStore.ts  groupStore.ts  pairingStore.ts  policyStore.ts  settingsStore.ts  storageProvider.ts  telemetryStore.ts
server/test/: commands.test.ts  devices.test.ts  enrollment.test.ts  health.test.ts  pairing.test.ts  setup.ts  signaling.test.ts
web-ui/: index.html  package-lock.json  package.json  vite.config.ts
web-ui/src/: App.css  App.tsx  index.css  main.tsx
web-ui/src/components/: DeviceCard.css  DeviceCard.tsx  EnrollmentModal.css  EnrollmentModal.tsx  FileBrowser.tsx  PairingFlow.tsx  RelayFileBrowser.tsx  RelayRemoteScreen.tsx  RelayTerminal.tsx  RemoteScreen.tsx
web-ui/src/components/apps/: InstallApkModal.css  InstallApkModal.tsx  UploadApkModal.css  UploadApkModal.tsx
web-ui/src/components/data/: DataTable.tsx  StatCard.tsx  StatusIndicator.tsx  index.ts
web-ui/src/components/device/: DeviceApps.tsx  DeviceCommands.tsx  DeviceComponents.css  DeviceEvents.tsx  DeviceFiles.tsx  DeviceOverview.tsx  DeviceRemote.tsx  index.ts
web-ui/src/components/layout/: Header.tsx  Sidebar.tsx  index.ts
web-ui/src/components/ui/: Badge.tsx  (+7 more)
web-ui/src/hooks/: index.ts  useAdminWebSocket.ts  useApps.ts  useAudit.ts  useAuth.tsx  useCommands.ts  useDevices.ts  useEvents.ts  useGroups.ts  useMdmCommands.ts  usePolicies.ts  useRelayWebSocket.ts  useSettings.ts  useTelemetry.ts  useWebRTC.ts
web-ui/src/layouts/: AppLayout.tsx
web-ui/src/lib/: BinaryProtocol.ts  FrameDecoder.ts
web-ui/src/pages/: AppsPage.tsx  AuditPage.tsx  Dashboard.tsx  DeviceDetail.tsx  DevicesPage.tsx  EventsPage.tsx  GroupDetailPage.tsx  GroupsPage.tsx  LoginPage.tsx  PoliciesPage.tsx  PolicyDetailPage.tsx  SettingsPage.tsx
web-ui/src/tests/: FileBrowser.test.tsx  PairingFlow.test.tsx  RemoteScreen.test.tsx  setupTests.ts
web-ui/src/theme/: customTheme.ts  designTokens.ts  index.ts
web-ui/src/types/: api.ts
web-ui/src/utils/: api.ts
(+142 files in other folders)
