[workspace]
members = [
    "crates/agent-core",
    "crates/agent-platform",
    "crates/agent-linux",
    "crates/agent-windows",
    "crates/agent-bin",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
async-trait = "0.1"
bytes = "1"
reqwest = { version = "0.12", features = ["json", "native-tls"] }
sha2 = "0.10"
directories = "6"
uuid = { version = "1", features = ["v4"] }
image = "=0.25.5"
turbojpeg = { version = "1", default-features = false, features = ["cmake", "pkg-config"] }

# Platform-specific
xcb = { version = "1", features = ["shm", "xtest", "xfixes", "randr"] }
nix = { version = "0.29", features = ["process", "signal", "term", "fs"] }
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Console",
    "Win32_System_IO",
    "Win32_System_Pipes",
    "Win32_System_Registry",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }
windows-service = "0.7"
