[package]
name = "agent-bin"
version.workspace = true
edition.workspace = true

[[bin]]
name = "android-remote-agent"
path = "src/main.rs"

[dependencies]
agent-core = { path = "../agent-core" }
agent-platform = { path = "../agent-platform" }
tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hostname = "0.4"

[target.'cfg(target_os = "linux")'.dependencies]
agent-linux = { path = "../agent-linux" }

[target.'cfg(target_os = "windows")'.dependencies]
agent-windows = { path = "../agent-windows" }
