[package]
name = "agent-windows"
version.workspace = true
edition.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
windows = { workspace = true }
windows-service = { workspace = true }

[dependencies]
agent-platform = { path = "../agent-platform" }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
